# nctu-osdi

./: README.md
lab0/: Makefile  README.md
lab0/src/: linker.ld  start.S
lab1/: CMakeLists.txt  README.md
lab1/drivers/: gpio.c  mini_uart.c
lab1/include/: aux_peri.h  core.h  mini_uart.h  string.h  time.h
lab1/kernel/: linker.ld  main.c  power.c  start.S
lab1/libs/: shell.c  string.c
lab1/scripts/: run_gdb.sh
lab2/: CMakeLists.txt  README.md
lab2/core/: time.c
lab2/drivers/: mailbox.c  uart0.c
lab2/include/: core.h  mailbox.h  string.h  uart0.h
lab2/kernel/: main.c
lab2/libs/: shell.c  string.c
lab3/: CMakeLists.txt  README.md
lab3/bootloader/: start.S
lab3/core/: irq.c  system_call.c
lab3/drivers/: fb.c  timer.c  uart.c  uart0.c
lab3/include/: circular_buffer.h  core.h  exception.h  irq.h  math.h  sys_regs.h  system_call.h  timer.h  uart.h  uart0.h
lab3/kernel/: exception.S  exception.c  main.c  start.S
lab3/libs/: shell.c  string.c
lab3/scripts/: send_kernel.py
lab4/: README.md
lab4/bootloader/: linker.ld
lab4/core/: irq.c  lock.c  system_call.c  time.c
lab4/drivers/: timer.c  uart.c  uart0.c
lab4/include/: context.h  core.h  delay.h  exception.h  image_loader.h  list.h  power.h  scheduler.h  string.h  sys_regs.h  system_call.h  task.h  timer.h
lab4/kernel/: asm-offsets.c  context.S  context.c  exception.S  exception.c  linker.ld.in  main.c  scheduler.c  start.S  task.c
lab4/libs/: math.c  shell.c  string.c
lab4/scripts/: gen_asm_offsets.sh  run_gdb.sh
lab5/: CMakeLists.txt
lab5/bootloader/: core.h  fb.h  gpio.h  image_loader.c  main.c  shell.h
lab5/core/: irq.c  system_call.c
lab5/include/: core.h  mmu.h  page.h  system_call.h
lab5/kernel/: context.S  delay.c  linker.ld.in  main.c  mmu.S  page.c
lab5/kernel/core/: context.S  exception.S  exception.c  irq.c  linker.ld.in  lock.c  main.c  mmu.S  mmu.c  page.c  power.c  scheduler.c  start.S  system_call.c  task.S  task.c
lab5/kernel/drivers/: mailbox.c
lab5/kernel/include/: aux_peri.h  core.h  exception.h  list.h  lock.h  math.h  mini_uart.h  mmu.h  page.h  power.h  scheduler.h  system_call.h  task.h  time.h  uart.h  uart0.h
lab5/kernel/include/uapi/: system_call.h
lab5/kernel/libs/: math.c  string.c
lab5/libs/: circular_buffer.c  shell.c
lab5/scripts/: send_kernel.py
lab5/user/: linker.ld  shell.c  test_command1.c  test_command2.c
lab5/user/include/: user_lib.h
lab5/user/libs/: entry.S  string.c  system_call.c  user_lib.c
lab6/bootloader/: uart0.c
lab6/kernel/core/: delay.c  main.c  mmu.c  scheduler.c  task.c
lab6/kernel/drivers/: uart0.c
lab6/kernel/include/: buddy_sys.h  list.h
lab6/kernel/include/uapi/: type.h
lab6/kernel/libs/: buddy_sys.c  obj_alloc.c
lab6/scripts/: run_gdb.sh
lab6/user/: test_command3.c
lab7/: CMakeLists.txt
lab7/bootloader/: image_loader.c
lab7/kernel/core/: asm-offsets.c  context.c  exception.S  main.c  system_call.c
lab7/kernel/drivers/: uart0.c
lab7/kernel/fs/: tmpfs.c  vfs.c
lab7/kernel/include/: core.h  mmu.h  obj_alloc.h  string.h  sys_regs.h  system_call.h  task.h  vfs.h
lab7/kernel/include/uapi/: delay.h  type.h
lab7/kernel/libs/: buddy_sys.c  kmalloc.c  obj_alloc.c
lab7/scripts/: send_file.sh
lab7/user/: shell.c  test_command1.c
lab7/user/include/: string.h
lab7/user/libs/: string.c
lab8/: CMakeLists.txt
lab8/bootloader/: shell.c
lab8/kernel/core/: exception.c  main.c  mmu.c  page.c  scheduler.c  task.c
lab8/kernel/drivers/: sd.c  uart.c
lab8/kernel/fs/: fat32.c  tmpfs.c  vfs.c
lab8/kernel/include/: delay.h  fat32.h  kmalloc.h  page.h  sd.h  string.h  tmpfs.h  vfs.h
lab8/kernel/include/uapi/: type.h
lab8/kernel/libs/: string.c
lab8/user/: test_command2.c  test_command3.c
